[gd_scene load_steps=7 format=3 uid="uid://c8hnuwvlbvruq"]

[ext_resource type="Script" path="res://Scripts/Components/FSM/StateMachine.gd" id="1_wj6rb"]
[ext_resource type="Script" path="res://Scripts/Player/States/Player_Idle.gd" id="2_rxqn6"]
[ext_resource type="Script" path="res://Scripts/Player/States/Player_Move.gd" id="3_olj6s"]
[ext_resource type="Script" path="res://Scripts/Player/States/Player_Attack.gd" id="4_m0tod"]
[ext_resource type="Script" path="res://Scripts/Player/States/Roll.gd" id="5_2dk5y"]
[ext_resource type="Script" path="res://Scripts/Player/States/PlayerDead.gd" id="6_m448x"]

[node name="StateMachine" type="Node" node_paths=PackedStringArray("InitialState")]
script = ExtResource("1_wj6rb")
InitialState = NodePath("Player_Idle")

[node name="Player_Idle" type="Node" parent="."]
script = ExtResource("2_rxqn6")

[node name="Player_Move" type="Node" parent="."]
script = ExtResource("3_olj6s")

[node name="Player_Attack" type="Node" parent="."]
script = ExtResource("4_m0tod")

[node name="Roll" type="Node" parent="."]
script = ExtResource("5_2dk5y")

[node name="Dead" type="Node" parent="."]
script = ExtResource("6_m448x")
